--- a/style/style.css
+++ b/style/style.css
@@ -1,3 +1,18 @@
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500&display=swap');
+
+/* Common */
+
+*{font-family: 'Noto Sans KR', sans-serif;}
+h2{font-weight: 500;}
+p{font-weight: 400;}
+input, textarea{font-weight: 300;}
+::selection{background: #0464b3; color: #fff; text-shadow: none;}
+.scrollAni{opacity: 0;}
+.fade_in{animation: fadeIn 500ms linear forwards;}
+@keyframes fadeIn{
+    0%{opacity: 0; top: 20px;}
+    100%{opacity: 1; top: 0px;}
+}
 
 /* Header */
 header{position: fixed; top: 0; left: 0; display: flex; width: 100%; justify-content: space-between; align-items: center; z-index: 999;transition: 800ms; height: 80px;}
@@ -52,19 +67,23 @@ section.main_work > div > ul > li > p{font-size: 16px; line-height: 25px;}
 }
 
 /* Vid */
-section.main_vid{text-align: center;}
+section.main_vid{text-align: center; opacity: 0; position: relative;}
 section.main_vid > h2{font-size: 30px; margin-top: 100px;}
 section.main_vid > p{font-size: 16px; line-height: 30px; margin: 40px 0;}
-section.main_vid > iframe{width: 80%; height: 100vh; margin-bottom: 115px;}
+section.main_vid > iframe{width: 80%; height: calc(100vh - 80px); margin-bottom: 115px;}
 
 /* Ment */
-section.main_ment{height: 500px; width: 100%; background: #0464b3;display: flex; flex-direction: column; align-items: center; color: #fff;}
-section.main_ment > h2{font-size: 20px; padding: 160px 0 60px;}
-section.main_ment > p{font-size: 24px; text-align: center; line-height: 36px;}
-section.main_ment > ul{margin: 50px 0 0;}
-section.main_ment > ul > li{float: left; margin: 0 10px;}
-section.main_ment > ul > li > span{width: 10px; height: 10px; background-color: #fff; opacity: 0.5; display: inline-block; border-radius: 50%; cursor: pointer;}
-section.main_ment > ul > li.active_btn > span{opacity: 1; width: 15px; height: 15px;}
+section.main_ment{height: 500px; width: 100%; background: #0464b3; color: #fff; position: relative;}
+section.main_ment > ul.ment_txt_wrap{position: absolute; height: 100%; width: 100%;}
+section.main_ment > ul.ment_txt_wrap > li{text-align: center; position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); opacity: 0; pointer-events: none;}
+section.main_ment > ul.ment_txt_wrap > li.active_ment{opacity: 1; pointer-events: all;}
+section.main_ment > ul.ment_txt_wrap > li > h2{font-size: 20px; padding-bottom: 50px;}
+section.main_ment > ul.ment_txt_wrap > li > p{font-size: 24px;line-height: 36px;}
+
+section.main_ment > ul.list_btn_wrap{position: absolute; left: 50%; transform: translateX(-50%); bottom: 50px;}
+section.main_ment > ul.list_btn_wrap > li{float: left; margin: 0 10px;}
+section.main_ment > ul.list_btn_wrap > li > span{width: 10px; height: 10px; background-color: #fff; opacity: 0.5; display: inline-block; border-radius: 50%; cursor: pointer;}
+section.main_ment > ul.list_btn_wrap > li.active_btn > span{opacity: 1; width: 15px; height: 15px;}
 
 /* Brand */
 section.main_brand{height: 200px;}
@@ -78,13 +97,13 @@ section.main_hire > div {margin: 0 auto; text-align: center;}
 section.main_hire > div > h2{font-size: 30px; padding: 100px 0 40px;}
 section.main_hire > div > p{font-size: 16px; line-height: 30px;}
 section.main_hire > div > form{width: 670px;margin: 40px 0 0;}
-section.main_hire > div > form input{border: none; outline: none; height: 47px; padding-left: 10px;}
+section.main_hire > div > form input{border: none; outline: none; height: 47px; padding-left: 10px; font-size: 16px;}
 section.main_hire > div > form > div{display: flex; justify-content: space-between;}
 section.main_hire > div > form > div > input.hire_name{width: 310px;}
 section.main_hire > div > form > div > input.hire_Email{width: 310px;}
 section.main_hire > div > form > input.hire_title{width: 660px; margin: 30px 0;}
-section.main_hire > div > form > input.hire_comment{width: 660px; height: 170px; margin-bottom: 30px;}
-section.main_hire > div > form > button{background: #0464b3; padding: 23px 35px; border: none; color: #fff;}
+section.main_hire > div > form > textarea.hire_comment{width: 660px; height: 170px; font-size: 16px; margin-bottom: 30px; resize: none;border: none; outline: none; padding:15px 0 0 10px;}
+section.main_hire > div > form > button{background: #0464b3; padding: 23px 35px; border: none; color: #fff; border-radius: 10px; outline: none;}
 
 /* Footer */
 footer{height: 330px; background: #141414; color: #fff;}
@@ -94,3 +113,4 @@ footer > div > ul > li{float: left; margin: 0 15px;}
 footer > div > ul > li > a{color: #fff; text-decoration: none; font-size: 15px;}
 footer > div > h3{clear: both; margin: 55px 0; font-size: 20px;}
 footer > div > span{margin: 0 0 80px; font-size: 15px;}
+
