--- a/style/style.css
+++ b/style/style.css
@@ -21,8 +21,8 @@ header > a.logo{margin: 0 0 0 100px;}
 header > a.logo > img{ width: 270px; height: 25px; display: inline-block;}
 header > nav{margin: 0 100px 0 0;}
 header > nav > ul{ display: inline-block;}
-header > nav > ul > li{float: left; padding: 32px 16px; cursor: pointer; vertical-align: middle;}
-header > nav > ul > li > a{color: #fff; text-decoration: none; outline: none;display: inline-block;font-size: 16px;line-height: 16px;vertical-align: middle;}
+header > nav > ul > li{float: left; padding: 34px 16px; cursor: pointer;}
+header > nav > ul > li > a{color: #fff; text-decoration: none; outline: none;font-size: 16px;}
 
 header > nav > ul > li:hover > div{opacity: 1; pointer-events: all;}
 header > nav > ul > li > div{position: absolute; left: 0; margin: 34px 0; padding: 40px 0; width: 100%; background-color: #e4e3e3; display: flex; justify-content: center; opacity: 0; pointer-events: none; transition: 400ms;}
@@ -61,10 +61,10 @@ section.main_about > p{font-size: 20px; line-height: 30px; margin: 40px 0 50px;}
 section.main_about > img{width: 80px;}
 
 /* Work */
-section.main_work{height: 700px;border-top: 1px solid #c6c6c6; border-bottom: 1px solid #c6c6c6; position: relative;}
-section.main_work > div{position: absolute; left: 50%; top: 50%; transform: translate(-50%,-50%);}
-section.main_work > div > ul{height: 100%; display: flex; margin: 0 auto;}
-section.main_work > div > ul > li{ margin: 0px 10px; width: 280px; opacity: 0;}
+section.main_work{width: 100%; display: inline-block; border-top: 1px solid #c6c6c6; border-bottom: 1px solid #c6c6c6; position: relative;}
+section.main_work > div{width: 100%; height: 100%; display: flex; justify-content: center; align-items: center; margin: 100px 0;}
+section.main_work > div > ul{display: flex; flex-wrap: wrap; justify-content: center; align-items: top;}
+section.main_work > div > ul > li{ margin: 0px 10px 20px; width: 280px; opacity: 0;}
 section.main_work > div > ul > li:nth-child(1){animation-delay: 0ms;}
 section.main_work > div > ul > li:nth-child(2){animation-delay: 100ms;}
 section.main_work > div > ul > li:nth-child(3){animation-delay: 200ms;}
@@ -83,16 +83,16 @@ section.main_work > div > ul > li > p{font-size: 16px; line-height: 25px;}
 /* Vid */
 section.main_vid{text-align: center; opacity: 0; position: relative;}
 section.main_vid > h2{font-size: 30px; margin-top: 100px;}
-section.main_vid > p{font-size: 16px; line-height: 30px; margin: 40px 0;}
+section.main_vid > p{font-size: 20px; line-height: 30px; margin: 40px 0;}
 section.main_vid > iframe{width: 80%; height: calc(100vh - 80px); margin-bottom: 115px;}
 
 /* Ment */
 section.main_ment{height: 500px; width: 100%; background: #0464b3; color: #fff; position: relative;}
-section.main_ment > ul.ment_txt_wrap{position: absolute; height: 100%; width: 100%;}
-section.main_ment > ul.ment_txt_wrap > li{text-align: center; position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); opacity: 0; pointer-events: none;  transition: 800ms;}
+section.main_ment > ul.ment_txt_wrap{position: absolute; height: 100%; width: 100%; display: flex; justify-content: center; align-items: center;}
+section.main_ment > ul.ment_txt_wrap > li{text-align: center; opacity: 0; pointer-events: none;  transition: 800ms; position: absolute;}
 section.main_ment > ul.ment_txt_wrap > li.active_ment{opacity: 1; pointer-events: all;}
 section.main_ment > ul.ment_txt_wrap > li > h2{font-size: 20px; padding-bottom: 50px;}
-section.main_ment > ul.ment_txt_wrap > li > p{font-size: 24px;line-height: 36px;}
+section.main_ment > ul.ment_txt_wrap > li > p{font-size: 24px;line-height: 36px; width: 600px;}
 
 section.main_ment > ul.list_btn_wrap{position: absolute; left: 50%; transform: translateX(-50%); bottom: 50px;}
 section.main_ment > ul.list_btn_wrap > li{float: left; margin: 0 10px;}
@@ -120,11 +120,31 @@ section.main_hire > div > form > textarea.hire_comment{width: 660px; height: 170
 section.main_hire > div > form > button{background: #0464b3; padding: 23px 35px; border: none; color: #fff; border-radius: 10px; outline: none;}
 
 /* Footer */
-footer{height: 330px; background: #141414; color: #fff;}
+footer{display: inline-block; background: #141414; color: #fff; width: 100%;}
 footer > div{display: flex; flex-direction: column; align-items: center;}
-footer > div > ul{margin: 90px 0 0;}
-footer > div > ul > li{float: left; margin: 0 15px;}
+footer > div > ul{margin: 90px 0 0;display: flex; flex-wrap: wrap; justify-content: center; align-items: center;}
+footer > div > ul > li{float: left; margin: 0 15px 15px;}
 footer > div > ul > li > a{color: #fff; text-decoration: none; font-size: 15px;}
 footer > div > h3{clear: both; margin: 55px 0; font-size: 20px;}
 footer > div > span{margin: 0 0 80px; font-size: 15px;}
 
+/* 스크린의 크기가 최대 1250px  */
+@media all and (max-width:1250px){
+
+    section.main_intro > div > div{transform: translate(-50%, -50%); left: 50%; text-align: center;}
+    section.main_intro > div > div > h1{font-size: 2em;}
+    section.main_intro > div > div > p{font-size: 1em;}
+
+
+    section.main_about > p{font-size: 1em;}
+
+    section.main_work > div > ul{flex-basis: 700px;}
+    section.main_work > div > ul > li{}
+
+    section.main_vid > p{font-size: 1em;}
+    section.main_hire > div > p{font-size: 1em;}
+}
+
+@media all and (max-width:700px){
+
+}
