--- a/style/style.css
+++ b/style/style.css
@@ -16,27 +16,40 @@ input, textarea{font-weight: 300;}
 
 /* Header */
 header{position: fixed; top: 0; left: 0; display: flex; width: 100%; justify-content: space-between; align-items: center; z-index: 999;transition: 800ms; height: 80px;}
-header:hover{background-color: #0464b3;}
+header:hover{background: #0464b3;}
 header > a.logo{margin: 0 0 0 100px;}
 header > a.logo > img{ width: 270px; height: 25px; display: inline-block;}
-header > nav{margin: 0 100px 0 0;}
-header > nav > ul{ display: inline-block;}
-header > nav > ul > li{float: left; padding: 34px 16px; cursor: pointer;}
-header > nav > ul > li > a{color: #fff; text-decoration: none; outline: none;font-size: 16px;}
+header > nav.slide_nav {margin: 0 100px 0 0;}
+header > nav.slide_nav > ul{ display: inline-block;}
+header > nav.slide_nav > ul > li{float: left; padding: 34px 16px;}
+header > nav.slide_nav > ul > li > a{color: #fff; text-decoration: none; outline: none;font-size: 16px;}
 
-header > nav > ul > li:hover > div{opacity: 1; pointer-events: all;}
-header > nav > ul > li > div{position: absolute; left: 0; margin: 34px 0; padding: 40px 0; width: 100%; background-color: #e4e3e3; display: flex; justify-content: center; opacity: 0; pointer-events: none; transition: 400ms;}
-header > nav > ul > li > div > div{ width:300px; margin: auto 100px auto 0;}
-header > nav > ul > li > div > div > h3{font-size: 30px; margin-bottom: 20px;}
-header > nav > ul > li > div > div > p{ font-size: 16px; line-height: 25px;}
-header > nav > ul > li > div > ul{margin-left: 40px; }
-header > nav > ul > li > div > ul > ul{float:left;}
-header > nav > ul > li > div > ul > ul > li{margin: 20px 50px;}
-header > nav > ul > li > div > ul > ul > li:first-child{margin: 0px 50px 20px;}
-header > nav > ul > li > div > ul > ul > li > a{text-decoration: none; color: #000; font-weight: 400;}
-header > nav > ul > li > div > ul > ul > li > a > strong{font-weight: 700; }
+header > nav.slide_nav > ul > li:hover > div{opacity: 1; pointer-events: all;}
+header > nav.slide_nav > ul > li > div{position: absolute; left: 0; margin: 34px 0; padding: 40px 0; width: 100%; background-color: #e4e3e3; display: flex; justify-content: center; opacity: 0; pointer-events: none; transition: 400ms;}
+header > nav.slide_nav > ul > li > div > div.nav_title{ width:300px; margin: auto 100px auto 0;}
+header > nav.slide_nav > ul > li > div > div.nav_title > h3{font-size: 30px; margin-bottom: 20px;}
+header > nav.slide_nav > ul > li > div > div.nav_title > p{ font-size: 16px; line-height: 25px;}
+header > nav.slide_nav > ul > li > div > ul{margin-left: 40px; }
+header > nav.slide_nav > ul > li > div > ul > ul{float:left;}
+header > nav.slide_nav > ul > li > div > ul > ul > li{margin: 20px 50px;}
+header > nav.slide_nav > ul > li > div > ul > ul > li:first-child{margin: 0px 50px 20px;}
+header > nav.slide_nav > ul > li > div > ul > ul > li > a{text-decoration: none; color: #000; font-weight: 400;}
+header > nav.slide_nav > ul > li > div > ul > ul > li > a > strong{font-weight: 700; }
+
+header > nav.slide_nav > ul > li > div.brands_wrap > ul > ul{border-right: 1px solid #343434;}
+header > nav.slide_nav > ul > li > div.brands_wrap > div.brands_list > ul > li{display: flex;}
+header > nav.slide_nav > ul > li > div.brands_wrap > div.brands_list > ul > li > ul{margin: 0 0 0 50px;}
+header > nav.slide_nav > ul > li > div.brands_wrap > div.brands_list > ul > li > ul > li{margin-bottom: 20px;}
+header > nav.slide_nav > ul > li > div.brands_wrap > div.brands_list > ul > li > ul > li > a{text-decoration: none; color: #000;}
 
 
+header > nav.side_nav{opacity: 0; display: none; pointer-events: none;  margin-right: 100px;}
+header > nav.side_nav > div{width: 30px; height: 20px; position: relative; cursor: pointer; }
+header > nav.side_nav > div > span{width: 100%; height: 2px; background: #fff; transition: 500ms; display: block; position: absolute; left: 0;}
+header > nav.side_nav > div > span:nth-child(1){top: 0px;}
+header > nav.side_nav > div > span:nth-child(2){top: 20px;}
+header > nav.side_nav > div.active_nav > span:nth-child(1){transform: rotate(45deg); top: 8px;}
+header > nav.side_nav > div.active_nav > span:nth-child(2){transform: rotate(-45deg); top: 8px;}
 
 /* Intro */
 section.main_intro{}
@@ -131,20 +144,28 @@ footer > div > span{margin: 0 0 80px; font-size: 15px;}
 /* 스크린의 크기가 최대 1250px  */
 @media all and (max-width:1250px){
 
+    /* Header */
+    header > nav.slide_nav {opacity: 0; display: none; pointer-events: none;}
+    header > nav.side_nav{display: inline-block; opacity: 1; pointer-events: all;}
+    
+    /* Intro */
     section.main_intro > div > div{transform: translate(-50%, -50%); left: 50%; text-align: center;}
     section.main_intro > div > div > h1{font-size: 2em;}
     section.main_intro > div > div > p{font-size: 1em;}
 
-
+    /* About */
     section.main_about > p{font-size: 1em;}
 
+    /* Work */
     section.main_work > div > ul{flex-basis: 700px;}
     section.main_work > div > ul > li{}
 
+    /* Vid */
     section.main_vid > p{font-size: 1em;}
+    
+    /* Hire */
     section.main_hire > div > p{font-size: 1em;}
 }
 
 @media all and (max-width:700px){
-
 }
