--- a/style/style.css
+++ b/style/style.css
@@ -88,9 +88,14 @@ section.main_work > div > ul > li:nth-child(1){animation-delay: 0ms;}
 section.main_work > div > ul > li:nth-child(2){animation-delay: 100ms;}
 section.main_work > div > ul > li:nth-child(3){animation-delay: 200ms;}
 section.main_work > div > ul > li:nth-child(4){animation-delay: 300ms;}
-section.main_work > div > ul > li > a{overflow: hidden; display: inline-block; height: 280px; width: 280px;}
+section.main_work > div > ul > li > a{overflow: hidden; display: inline-block; height: 280px; width: 280px; position: relative; color: #fff;}
 section.main_work > div > ul > li > a > img{ transition: 800ms; position: relative;}
-section.main_work > div > ul > li > a > img:hover{transform: scale(1.2);}
+section.main_work > div > ul > li > a:hover > img{transform: scale(1.2);}
+section.main_work > div > ul > li > a > span{
+    width: 100%; height: 100%; background-color: #0464b360; position: absolute; top: 0; left: 0; display: flex;
+    justify-content: center; align-items: center; transition: 500ms; font-size: 20px; font-weight: 400; opacity: 0;
+}
+section.main_work > div > ul > li > a:hover > span{opacity: 1;}
 section.main_work > div > ul > li > h2{font-size: 20px; margin: 20px 0 10px;}
 section.main_work > div > ul > li > p{font-size: 16px; line-height: 25px;}
 .active_list{animation: list_up 500ms linear forwards;}
