--- a/style/style.css
+++ b/style/style.css
@@ -5,6 +5,7 @@
 *{font-family: 'Noto Sans KR', sans-serif;}
 h2{font-weight: 500;}
 p{font-weight: 400;}
+a{text-decoration: none; color: #000;}
 input, textarea{font-weight: 300;}
 ::selection{background: #0464b3; color: #fff; text-shadow: none;}
 .scrollAni{opacity: 0;}
@@ -22,7 +23,7 @@ header > a.logo > img{ width: 270px; height: 25px; display: inline-block;}
 header > nav.slide_nav {margin: 0 100px 0 0;}
 header > nav.slide_nav > ul{ display: inline-block;}
 header > nav.slide_nav > ul > li{float: left; padding: 34px 16px;}
-header > nav.slide_nav > ul > li > a{color: #fff; text-decoration: none; outline: none;font-size: 16px;}
+header > nav.slide_nav > ul > li > a{color: #fff;  outline: none;font-size: 16px;}
 
 header > nav.slide_nav > ul > li:hover > div{opacity: 1; pointer-events: all; display: flex;}
 header > nav.slide_nav > ul > li > div{position: absolute; left: 0; margin: 34px 0; padding: 40px 0; width: 100%; background-color: #e4e3e3; display: none; justify-content: center; opacity: 0; pointer-events: none; transition: 400ms;}
@@ -33,7 +34,7 @@ header > nav.slide_nav > ul > li > div > ul{margin-left: 40px; }
 header > nav.slide_nav > ul > li > div > ul > ul{float:left;}
 header > nav.slide_nav > ul > li > div > ul > ul > li{margin: 20px 50px;}
 header > nav.slide_nav > ul > li > div > ul > ul > li:first-child{margin: 0px 50px 20px;}
-header > nav.slide_nav > ul > li > div > ul > ul > li > a{text-decoration: none; color: #000; font-weight: 400;}
+header > nav.slide_nav > ul > li > div > ul > ul > li > a{ color: #000; font-weight: 400;}
 header > nav.slide_nav > ul > li > div > ul > ul > li > a > strong{font-weight: 700; }
 
 header > nav.slide_nav > ul > li > div.brands_wrap{}
@@ -45,17 +46,45 @@ header > nav.slide_nav > ul > li > div.brands_wrap > div.brands_list_wrap > ul >
 header > nav.slide_nav > ul > li > div.brands_wrap > div.brands_list_wrap > ul > li.active_brands{opacity: 1; display: flex; pointer-events: all;}
 header > nav.slide_nav > ul > li > div.brands_wrap > div.brands_list_wrap > ul > li > ul{margin: 0 0 0 50px;}
 header > nav.slide_nav > ul > li > div.brands_wrap > div.brands_list_wrap > ul > li > ul > li{margin-bottom: 20px;}
-header > nav.slide_nav > ul > li > div.brands_wrap > div.brands_list_wrap > ul > li > ul > li > a{text-decoration: none; color: #000;}
+header > nav.slide_nav > ul > li > div.brands_wrap > div.brands_list_wrap > ul > li > ul > li > a{ color: #000;}
 header > nav.slide_nav > ul > li > div.brands_wrap > div.brands_list_wrap > ul > li > ul > li > a:hover{text-decoration: underline #0464b3; color: #0464b3;}
 
 
-header > nav.side_nav{opacity: 0; display: none; pointer-events: none;  margin-right: 100px;}
-header > nav.side_nav > div{width: 30px; height: 20px; position: relative; cursor: pointer; }
-header > nav.side_nav > div > span{width: 100%; height: 2px; background: #fff; transition: 500ms; display: block; position: absolute; left: 0;}
-header > nav.side_nav > div > span:nth-child(1){top: 0px;}
-header > nav.side_nav > div > span:nth-child(2){top: 20px;}
+header > nav.side_nav{opacity: 0; display: none; pointer-events: none;  margin-right: 50px; }
+header > nav.side_nav > div.nav_bar{width: 30px; height: 20px; position: relative; cursor: pointer;  z-index: 999;}
+header > nav.side_nav > div.nav_bar > span{width: 100%; height: 2px; background: #fff; transition: 500ms; display: block; position: absolute; left: 0;}
+header > nav.side_nav > div.nav_bar > span:nth-child(1){top: 0px;}
+header > nav.side_nav > div.nav_bar > span:nth-child(2){top: 20px;}
+header > nav.side_nav > div.active_nav > span{background: #000;}
 header > nav.side_nav > div.active_nav > span:nth-child(1){transform: rotate(45deg); top: 8px;}
 header > nav.side_nav > div.active_nav > span:nth-child(2){transform: rotate(-45deg); top: 8px;}
+
+header > nav.side_nav > div.side_nav_list_wrap{position: absolute; opacity: 0; pointer-events: none; width: 300px; height: 100vh; background-color: #fff; top: 0; right: 0; z-index: 1; transition: 500ms;}
+header > nav.side_nav > div.active_side_nav{opacity: 1; pointer-events: all;}
+header > nav.side_nav > div.side_nav_list_wrap > ul{margin: 150px auto 0; width: 80%;}
+header > nav.side_nav > div.side_nav_list_wrap > ul > li{border-bottom: 1px solid #c6c6c6; padding: 15px 0;}
+header > nav.side_nav > div.side_nav_list_wrap > ul > li > a{color: #000; }
+
+header > nav.side_nav > div.side_nav_list_wrap > ul > li > div.side_nav_one{position: absolute; opacity: 0; pointer-events: none; width: 280px; height: 100vh;  background-color: #fff; top: 0; right: 0; z-index: 2; box-shadow: 0 0 20px 0 #666; transition: 500ms;}
+header > nav.side_nav > div.side_nav_list_wrap > ul > li > div.active_side_nav{opacity: 1; pointer-events: all;}
+header > nav.side_nav > div.side_nav_list_wrap > ul > li > div.side_nav_one > h3{margin:0 0 0 10%; height: 80px; display: flex; align-items: center;}
+header > nav.side_nav > div.side_nav_list_wrap > ul > li > div.side_nav_one > h3 > a{ color: #000;}
+header > nav.side_nav > div.side_nav_list_wrap > ul > li > div.side_nav_one > ul{margin: 150px auto 0; width: 80%;}
+header > nav.side_nav > div.side_nav_list_wrap > ul > li > div.side_nav_one > ul > li{border-bottom: 1px solid #c6c6c6; padding: 15px 0;}
+
+header div.side_nav_two{position: absolute; opacity: 0; pointer-events: none; width: 260px; height: 100vh;  background-color: #fff; top: 0; right: 0; z-index: 3; box-shadow: 0 0 20px 0 #666; transition: 500ms;}
+header div.active_side_nav{opacity: 1; pointer-events: all;}
+header div.side_nav_two > h4{margin:0 0 0 10%; height: 80px; display: flex; align-items: center;}
+header div.side_nav_two > ul{margin: 150px auto 0; width: 80%;}
+header div.side_nav_two > ul.scroll_nav_brands{height: 600px; overflow-y: scroll;}
+header div.side_nav_two > ul.scroll_nav_brands::-webkit-scrollbar{background-color: transparent;  width: 2px;}
+header div.side_nav_two > ul.scroll_nav_brands::-webkit-scrollbar-thumb{background-color: #0464b3;}
+header div.side_nav_two > ul.scroll_nav_brands::-webkit-scrollbar-track{background-color: #0464b333;}
+header div.side_nav_two > ul > li{border-bottom: 1px solid #c6c6c6; padding: 15px 0; margin-right: 10px;}
+
+/* Dark_Filter */
+div.dark_filter{position: fixed; width: 100%; height: 100%; background: #000; opacity: 0;z-index: 1; pointer-events: none; transition: 500ms;}
+div.active_filter{opacity: 0.4;}
 
 /* Intro */
 section.main_intro{}
@@ -148,7 +177,7 @@ footer{display: inline-block; background: #141414; color: #fff; width: 100%;}
 footer > div{display: flex; flex-direction: column; align-items: center;}
 footer > div > ul{margin: 90px 0 0;display: flex; flex-wrap: wrap; justify-content: center; align-items: center;}
 footer > div > ul > li{float: left; margin: 0 15px 15px;}
-footer > div > ul > li > a{color: #fff; text-decoration: none; font-size: 15px;}
+footer > div > ul > li > a{color: #fff;  font-size: 15px;}
 footer > div > h3{clear: both; margin: 55px 0; font-size: 20px;}
 footer > div > span{margin: 0 0 80px; font-size: 15px;}
 
@@ -156,6 +185,7 @@ footer > div > span{margin: 0 0 80px; font-size: 15px;}
 @media all and (max-width:1250px){
 
     /* Header */
+    header > a.logo{margin: 0 0 0 50px;}
     header > a.logo > img{ width: 170px; height: auto;}
     header > nav.slide_nav {opacity: 0; display: none; pointer-events: none;}
     header > nav.side_nav{display: inline-block; opacity: 1; pointer-events: all;}
