--- a/style/style.css
+++ b/style/style.css
@@ -18,15 +18,18 @@ input, textarea{font-weight: 300;}
 /* Header */
 header{position: fixed; top: 0; left: 0; display: flex; width: 100%; justify-content: space-between; align-items: center; z-index: 999;transition: 800ms; height: 80px;}
 header:hover{background: #0464b3;}
+header:hover > nav.slide_nav > span{opacity: 1;}
 header > a.logo{margin: 0 0 0 100px;}
 header > a.logo > img{ width: 270px; height: 25px; display: inline-block;}
-header > nav.slide_nav {margin: 0 100px 0 0;}
-header > nav.slide_nav > ul{ display: inline-block;}
-header > nav.slide_nav > ul > li{float: left; padding: 34px 16px;}
-header > nav.slide_nav > ul > li > a{color: #fff;  outline: none;font-size: 16px;}
+header > nav.slide_nav {margin: 0 100px 0 0; height: 100%;}
+header > nav.slide_nav > ul{ height: 100%;}
+header > nav.slide_nav > ul > li{float: left; height: 100%;}
+header > nav.slide_nav > ul > li > a{color: #fff;  outline: none;font-size: 16px; line-height: 80px; height: 100%; display: inline-block; padding: 0 20px;}
+header > nav.slide_nav > span{display: inline-block; height: 4px; background-color: #61b8ff; position: absolute; bottom: 0; transition: 500ms; opacity: 0; width: 0px; pointer-events: none;}
 
 header > nav.slide_nav > ul > li:hover > div{opacity: 1; pointer-events: all; display: flex;}
-header > nav.slide_nav > ul > li > div{position: absolute; left: 0; margin: 34px 0; padding: 40px 0; width: 100%; background-color: #e4e3e3; display: none; justify-content: center; opacity: 0; pointer-events: none; transition: 400ms;}
+header > nav.slide_nav > ul > li > div a:hover{color: #0464b3; text-decoration: #0464b3 underline;}
+header > nav.slide_nav > ul > li > div{position: absolute; left: 0; top:80px; padding: 40px 0; width: 100%; background-color: #e4e3e3; display: none; justify-content: center; opacity: 0; pointer-events: none; transition: 400ms;}
 header > nav.slide_nav > ul > li > div > div.nav_title{ width:300px; margin: auto 100px auto 0;}
 header > nav.slide_nav > ul > li > div > div.nav_title > h3{font-size: 30px; margin-bottom: 20px;}
 header > nav.slide_nav > ul > li > div > div.nav_title > p{ font-size: 16px; line-height: 25px;}
@@ -41,7 +44,7 @@ header > nav.slide_nav > ul > li > div.brands_wrap{}
 header > nav.slide_nav > ul > li > div.brands_wrap > div.nav_title{margin: auto 100px auto 0px;}
 header > nav.slide_nav > ul > li > div.brands_wrap > ul > ul{border-right: 1px solid #343434;}
 header > nav.slide_nav > ul > li > div.brands_wrap > ul > ul.brands_title_list > li > a{color: #6f6f6f; cursor: default;}
-header > nav.slide_nav > ul > li > div.brands_wrap > ul > ul.brands_title_list > li > a:hover{color: #000;}
+header > nav.slide_nav > ul > li > div.brands_wrap > ul > ul.brands_title_list > li > a:hover{color: #000; text-decoration: none;}
 header > nav.slide_nav > ul > li > div.brands_wrap > div.brands_list_wrap > ul > li{opacity: 0; display: none; pointer-events: none;position: absolute;}
 header > nav.slide_nav > ul > li > div.brands_wrap > div.brands_list_wrap > ul > li.active_brands{opacity: 1; display: flex; pointer-events: all;}
 header > nav.slide_nav > ul > li > div.brands_wrap > div.brands_list_wrap > ul > li > ul{margin: 0 0 0 50px;}
